--- a/src/template.html
+++ b/src/template.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Amatic SC">
 </head>
 <body>
 </body>
