--- a/src/template.html
+++ b/src/template.html
@@ -4,37 +4,41 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <style>
-        html, body {
-            height: 100%;
+        body canvas {
+            position: absolute;
+            top: 5px;
+            left: 5px;
         }
 
         body {
-            margin: 0;
-        }
-
-        .canvas-container {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100%;
-        }
-
-        .canvas-container {
-            max-width: 100%;
-            max-height: 100%;
-        }
-
-        @supports (object-fit: contain) {
-            .canvas-container canvas {
-                width: 100%;
-                height: 100%;
-                object-fit: contain;
-            }
+            position: relative;
+            height: 100vh;
+            width: 100vw;
         }
     </style>
+    <script type="text/javascript">
+        window.onload = function () {
+            console.log(window.innerHeight)
+            console.log(window.innerWidth)
+            var game = document.querySelector("canvas")
+
+            var isPortrait = window.innerHeight > window.innerWidth
+            var style = ""
+            if (isPortrait) {
+                // portrait? and need rotate 90deg
+                style += "transform: rotate(90deg);"
+            }
+            var lowerSide = isPortrait ? window.innerWidth : window.innerHeight
+            var needScale = lowerSide < 600
+            if (needScale) {
+                var coeff = lowerSide / 600
+                style += "transform: scale(" + coeff + ");"
+            }
+            game.style = style
+        };
+    </script>
 </head>
 <body>
-    <div id="container" class="canvas-container"></div>
 </body>
 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
